[workspace]
resolver = "2"

members = [
    "rust/helloworld",
    "rust/memtest",
    "rust/exception",
    "rust/display",
    "rust/fs/shell",
    "rust/net/echoserver",
    "rust/net/httpclient",
    "rust/net/httpserver",
    "rust/net/udpserver",
    "rust/net/bwbench",
    "rust/task/parallel",
    "rust/task/sleep",
    "rust/task/yield",
    "rust/task/priority",
    "rust/task/tls",
    "rust/task/irq",
    "rust/task/affinity",
    "rust/task/wait_queue",
]
exclude = [".arceos"]

[workspace.dependencies]
axstd = { git = "https://github.com/oscomp/arceos.git" }

[patch.crates-io]
page_table_multiarch = { git = "https://github.com/oscomp/page_table_multiarch.git", rev = "c8a13b0"}
page_table_entry = { git = "https://github.com/oscomp/page_table_multiarch.git", rev = "c8a13b0" }
