[workspace]
resolver = "2"

members = [
    "rust/helloworld",
    "rust/memtest",
    "rust/exception",
    "rust/display",
    "rust/fs/shell",
    "rust/net/echoserver",
    "rust/net/httpclient",
    "rust/net/httpserver",
    "rust/net/udpserver",
    "rust/net/bwbench",
    "rust/task/parallel",
    "rust/task/sleep",
    "rust/task/yield",
    "rust/task/priority",
    "rust/task/tls",
    "rust/task/irq",
    "rust/task/affinity",
    "rust/task/wait_queue",

    "tour/u_1_0",
    "tour/u_2_0",
    "tour/u_3_0",
    "tour/u_4_0",
    "tour/u_5_0",
    # "tour/u_6_0",
    # "tour/u_6_1",
    # "tour/u_7_0",
    # "tour/u_8_0",
    # "tour/m_1_0",
    # "tour/m_1_1",
    # "tour/m_2_0",
    # "tour/m_3_0",
    # "tour/m_3_1",
    # "tour/h_1_0",
    # "tour/h_2_0",
    # "tour/h_3_0",
    # "tour/h_4_0",
]
exclude = [".arceos"]

[workspace.dependencies]
axstd = { git = "https://github.com/oscomp/arceos.git" }

[patch.crates-io]
page_table_multiarch = { git = "https://github.com/oscomp/page_table_multiarch.git", rev = "c8a13b0"}
page_table_entry = { git = "https://github.com/oscomp/page_table_multiarch.git", rev = "c8a13b0" }
